BuildIt-module/security.tf
resource "aws_security_group" "frontend_SG" {
  name = "frontend_SG"
  description = "Front End EC2 Instance SG"
  vpc_id = resource.aws_vpc.BuildIt_VPC.id

  tags = local.tags
}

resource "aws_security_group_rule" "public_out" {
  type        = "egress"
  from_port   = 0
  to_port     = 0
  protocol    = "-1"
  cidr_blocks = ["0.0.0.0/0"]
 
  security_group_id = aws_security_group.frontend_SG.id
}

resource "aws_security_group_rule" "public_in_ssh" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.frontend_SG.id
}

resource "aws_security_group_rule" "public_in_http" {
  type = "ingress"
  from_port = 80
  to_port = 80
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = aws_security_group.frontend_SG.id
}

resource "aws_security_group_rule" "public_in_https" {
  type = "ingress"
  from_port = 443
  to_port = 443
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = aws_security_group.frontend_SG.id
}


resource "aws_security_group" "server_SG" {
  name = "server_SG"
  description = "Server EC2 Instance SG"
  vpc_id = resource.aws_vpc.BuildIt_VPC.id

  tags = local.tags
}

resource "aws_security_group_rule" "private_out" {
  type        = "egress"
  from_port   = 0
  to_port     = 0
  protocol    = "-1"
  cidr_blocks = ["0.0.0.0/0"]
 
  security_group_id = aws_security_group.server_SG.id
}

resource "aws_security_group_rule" "private_in_ssh" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.server_SG.id
}

resource "aws_security_group_rule" "private_in_http" {
  type = "ingress"
  from_port = 80
  to_port = 80
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = aws_security_group.server_SG.id
}

resource "aws_security_group_rule" "private_in_https" {
  type = "ingress"
  from_port = 443
  to_port = 443
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = aws_security_group.server_SG.id
}
